tests/field/set_on_bool.out
[31merror[error]: Only instances have fields
----- Traceback -----
  ┌─ <unknown>:1:18
  | 
1 | True.foo = "value"
  |                   ^
[0m